[tool.poetry]
name = "test-poetry-1"
version = "0.1.0"
description = ""
authors = ["isConic <cncrlf@gmail.com>"]
readme = "README.md"
packages = [{include = "test_poetry_1"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
